remove questions number in fixtures, fix sessions boxes spacing

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,7 +1,7 @@
 .btn-tile {
     width: 256px;
     height: 256px;
-    margin: 0 4px 8px 0;
+    margin: 0 8px 8px 0;
 }
 .zcpe-pass-fail {
     cursor: default;
